@@ -152,6 +152,7 @@ t/0601_Dialog_Scan.t
 t/0602_Dialog_Scan.t
 t/0603_Dialog_Scan.t
 t/0604_Dialog_Scan.t
+t/0605_Dialog_Scan.t
 t/0610_Dialog_Scan_Sane.t
 t/0611_Dialog_Scan_Sane.t
 t/0612_Dialog_Scan_Sane.t
