@@ -1,0 +1,142 @@
+use warnings;
+use strict;
+use Test::More tests => 1;
+use Glib qw(TRUE FALSE);    # To get TRUE and FALSE
+use Gtk2 -init;             # Could just call init separately
+use Sane 0.05;              # To get SANE_* enums
+use Sub::Override;    # Override Frontend::Sane to test functionality that
+                      # we can't with the test backend
+use Storable qw(freeze);    # For cloning the options cache
+
+BEGIN {
+    use Gscan2pdf::Dialog::Scan::Sane;
+}
+
+#########################
+
+my $window = Gtk2::Window->new;
+
+Glib::set_application_name('gscan2pdf');
+use Log::Log4perl qw(:easy);
+Log::Log4perl->easy_init($WARN);
+my $logger = Log::Log4perl::get_logger;
+
+# The overrides must occur before the thread is spawned in setup.
+my $override = Sub::Override->new;
+$override->replace(
+    'Gscan2pdf::Frontend::Sane::_thread_get_devices' => sub {
+        my ( $self, $uuid ) = @_;
+        $self->{return}->enqueue(
+            {
+                type    => 'finished',
+                process => 'get-devices',
+                uuid    => $uuid,
+                info    => freeze(
+                    [
+                        {
+                            'name'  => 'mock_device',
+                            'label' => 'mock_device'
+                        }
+                    ]
+                ),
+                status => SANE_STATUS_GOOD,
+            }
+        );
+        return;
+    }
+);
+$override->replace(
+    'Gscan2pdf::Frontend::Sane::_thread_open_device' => sub {
+        my ( $self, $uuid, $device_name ) = @_;
+        $self->{return}->enqueue(
+            {
+                type    => 'finished',
+                process => 'open-device',
+                uuid    => $uuid,
+                info    => freeze( \$device_name ),
+                status  => SANE_STATUS_GOOD,
+            }
+        );
+        return;
+    }
+);
+
+# A Samsung CLX-4190 has a doc-source options instead of source, meaning that
+# the property allow-batch-flatbed had to be enabled to scan more than one
+# page from the ADF. Override enough to test for this.
+my $options = [
+    undef,
+    {
+        'constraint' => [ 'Auto', 'Flatbed', 'ADF Simplex' ],
+        'desc'            => 'Selects source of the document to be scanned',
+        'val'             => 'Auto',
+        'constraint_type' => 3,
+        'max_values'      => 1,
+        'index'           => 11,
+        'unit'            => 0,
+        'name'            => 'doc-source',
+        'cap'             => 5,
+        'type'            => 3,
+        'title'           => 'Doc source'
+    },
+];
+$override->replace(
+    'Gscan2pdf::Frontend::Sane::_thread_get_options' => sub {
+        my ( $self, $uuid ) = @_;
+        $self->{return}->enqueue(
+            {
+                type    => 'finished',
+                process => 'get-options',
+                uuid    => $uuid,
+                info    => freeze($options),
+                status  => SANE_STATUS_GOOD,
+            }
+        );
+        return;
+    }
+);
+
+Gscan2pdf::Frontend::Sane->setup($logger);
+
+my $dialog = Gscan2pdf::Dialog::Scan::Sane->new(
+    title           => 'title',
+    'transient-for' => $window,
+    'logger'        => $logger
+);
+
+$dialog->{signal} = $dialog->signal_connect(
+    'changed-device-list' => sub {
+        $dialog->signal_handler_disconnect( $dialog->{signal} );
+        $dialog->set( 'device', 'mock_device' );
+    }
+);
+
+$dialog->{reloaded_signal} = $dialog->signal_connect(
+    'reloaded-scan-options' => sub {
+        $dialog->signal_handler_disconnect( $dialog->{reloaded_signal} );
+
+        my $signal;
+        $signal = $dialog->signal_connect(
+            'changed-current-scan-options' => sub {
+                $dialog->signal_handler_disconnect($signal);
+                is $dialog->get('num-pages'), 0, 'num-pages';
+                Gtk2->main_quit;
+            }
+        );
+        $dialog->set_current_scan_options(
+            Gscan2pdf::Scanner::Profile->new_from_data(
+                {
+                    'frontend' => { 'num_pages' => '0' }
+                }
+            )
+        );
+
+    }
+);
+
+$dialog->get_devices;
+
+Gtk2->main;
+
+Gscan2pdf::Frontend::Sane->quit;
+__END__
