@@ -11,6 +11,7 @@
   Thanks to Chris JC Jones for donating the icon.
 * + ppm & pbm extensions to open file chooser.
   Closes bug #252 (Support for pbm nd ppm bitmap formats)
+* Fixed multipage scanning for Samsung CLX-4190.
 * Change metadata filename codes to use strftime
 * Update to Hungarian translation (thanks to csola)
 * Update to Traditional Chinese translation (thanks to Po-Hsu Lin)
